# agents

./: .gitignore  Agent.py  Locations.py  README.md  World.py  crew_manifest.csv  experiments.ipynb  main.py  prompts.py  test.py  utils.py
adam/: actions.py  manual-agents.ipynb  pyproject.toml
