[tool.poetry]
name = "code"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
panadas = "^0.2"
#numpy = "^2.1.3" 
numpy = "^1.26.0"
spark = "^0.2.1"
parquet = "^1.3.1"
pyspark = "^3.5.3"
ipykernel = "^6.29.5"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
wikipedia = "^1.4.0"
langchain = "^0.3.7"
langchain-community = "^0.3.5"
openai = "^1.54.3"
langchain-openai = "^0.2.6"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
